--- a/racecar_navigation/config/teb_local_planner_params.yaml
+++ b/racecar_navigation/config/teb_local_planner_params.yaml
@@ -22,7 +22,7 @@ TebLocalPlannerROS:
  acc_lim_theta: 2.5
 
  # ********************** Carlike robot parameters ********************
- min_turning_radius: 1.1        # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
+ min_turning_radius: 0.75     #1.1   # Min turning radius of the carlike robot (compute value using a model or adjust with rqt_reconfigure manually)
  wheelbase: 0.34                # Wheelbase of our robot
  cmd_angle_instead_rotvel: True # stage simulator takes the angle instead of the rotvel as input (twist message)
  # ********************************************************************
